Farmer cycle WIP

--- a/KM_Editor.cfg
+++ b/KM_Editor.cfg
@@ -33,7 +33,7 @@
 -K$00400000
 -LE"c:\program files\borland\delphi6\Projects\Bpl"
 -LN"c:\program files\borland\delphi6\Projects\Bpl"
--U"E:\Delphi\ Common ;..\ Common "
--O"E:\Delphi\ Common ;..\ Common "
--I"E:\Delphi\ Common ;..\ Common "
--R"E:\Delphi\ Common ;..\ Common "
+-U"E:\Delphi\ Common ;.\Common"
+-O"E:\Delphi\ Common ;.\Common"
+-I"E:\Delphi\ Common ;.\Common"
+-R"E:\Delphi\ Common ;.\Common"
