--- a/KaM_Remake.cfg
+++ b/KaM_Remake.cfg
@@ -31,8 +31,8 @@
 -M
 -$M16384,1048576
 -K$00400000
--LE"c:\program files\borland\delphi6\Projects\Bpl"
--LN"c:\program files\borland\delphi6\Projects\Bpl"
+-LE"d:\program files\borland\delphi6\Projects\Bpl"
+-LN"d:\program files\borland\delphi6\Projects\Bpl"
 -U".\ Common "
 -O".\ Common "
 -I".\ Common "
