- more work on FontEditor

--- a/Utils/FontEditor/FontEditor.cfg
+++ b/Utils/FontEditor/FontEditor.cfg
@@ -14,8 +14,8 @@
 -$N+
 -$O+
 -$P+
--$Q-
--$R-
+-$Q+
+-$R+
 -$S-
 -$T-
 -$U-
@@ -32,10 +32,9 @@
 -M
 -$M16384,1048576
 -K$00400000
--LE"c:\program files\borland6\delphi6\Projects\Bpl"
--LN"c:\program files\borland6\delphi6\Projects\Bpl"
+-LE"c:\program files\borland\delphi6\Projects\Bpl"
+-LN"c:\program files\borland\delphi6\Projects\Bpl"
 -U"..\..\ Common "
 -O"..\..\ Common "
 -I"..\..\ Common "
 -R"..\..\ Common "
--DUSE_DIGIMIX;madExcept
