--- a/KaM_Remake.lpi
+++ b/KaM_Remake.lpi
@@ -7,7 +7,6 @@
       <MainUnit Value="0"/>
       <TargetFileExt Value=".exe"/>
       <Title Value="KaM_Remake"/>
-      <Icon Value="0"/>
       <UseXPManifest Value="True"/>
       <ActiveEditorIndexAtStart Value="1"/>
     </General>
@@ -33,54 +32,62 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="43">
+    <Units Count="53">
       <Unit0>
         <Filename Value="KaM_Remake.dpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KaM_Remake"/>
-        <CursorPos X="1" Y="1"/>
+        <CursorPos X="16" Y="8"/>
         <TopLine Value="1"/>
-        <UsageCount Value="23"/>
+        <UsageCount Value="26"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit0>
       <Unit1>
         <Filename Value="KM_Unit1.pas"/>
         <IsPartOfProject Value="True"/>
         <HasResources Value="True"/>
         <UnitName Value="KM_Unit1"/>
-        <CursorPos X="32" Y="8"/>
-        <TopLine Value="1"/>
-        <EditorIndex Value="1"/>
-        <UsageCount Value="21"/>
-        <Loaded Value="True"/>
+        <CursorPos X="21" Y="63"/>
+        <TopLine Value="57"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit1>
       <Unit2>
         <Filename Value=" Common \KromUtils.pas"/>
         <UnitName Value="KromUtils"/>
-        <CursorPos X="1" Y="1"/>
-        <TopLine Value="1"/>
+        <CursorPos X="18" Y="519"/>
+        <TopLine Value="511"/>
+        <EditorIndex Value="0"/>
         <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit2>
       <Unit3>
         <Filename Value="KM_Render.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Render"/>
-        <CursorPos X="1" Y="7"/>
-        <TopLine Value="1"/>
-        <UsageCount Value="21"/>
+        <CursorPos X="66" Y="447"/>
+        <TopLine Value="439"/>
+        <EditorIndex Value="1"/>
+        <UsageCount Value="24"/>
+        <Loaded Value="True"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit3>
       <Unit4>
         <Filename Value=" Common \dglOpenGL.pas"/>
         <UnitName Value="dglOpenGL"/>
-        <CursorPos X="12" Y="426"/>
-        <TopLine Value="404"/>
+        <CursorPos X="6" Y="454"/>
+        <TopLine Value="440"/>
         <UsageCount Value="10"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit4>
       <Unit5>
         <Filename Value=" Common \KromOGLUtils.pas"/>
         <UnitName Value="KromOGLUtils"/>
         <CursorPos X="1" Y="6"/>
         <TopLine Value="1"/>
-        <UsageCount Value="20"/>
+        <UsageCount Value="21"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit5>
       <Unit6>
         <Filename Value="..\..\Lazarus\fpc\2.2.4\source\packages\opengl\src\gl.pp"/>
@@ -95,7 +102,8 @@
         <UnitName Value="KM_TGATexture"/>
         <CursorPos X="8" Y="218"/>
         <TopLine Value="201"/>
-        <UsageCount Value="21"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit7>
       <Unit8>
         <Filename Value=" Common \ZLIBEX.PAS"/>
@@ -103,14 +111,16 @@
         <CursorPos X="1" Y="285"/>
         <TopLine Value="268"/>
         <UsageCount Value="10"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit8>
       <Unit9>
         <Filename Value="KM_CommonTypes.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_CommonTypes"/>
-        <CursorPos X="5" Y="460"/>
-        <TopLine Value="426"/>
-        <UsageCount Value="21"/>
+        <CursorPos X="38" Y="110"/>
+        <TopLine Value="96"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit9>
       <Unit10>
         <Filename Value="..\..\Lazarus\fpc\2.2.4\source\rtl\inc\systemh.inc"/>
@@ -124,7 +134,8 @@
         <UnitName Value="KM_UnitActionGoInOut"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="21"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit11>
       <Unit12>
         <Filename Value="KM_UnitActionStay.pas"/>
@@ -132,7 +143,8 @@
         <UnitName Value="KM_UnitActionStay"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="21"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit12>
       <Unit13>
         <Filename Value="KM_UnitActionWalkTo.pas"/>
@@ -140,15 +152,17 @@
         <UnitName Value="KM_UnitActionWalkTo"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="21"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit13>
       <Unit14>
         <Filename Value="KM_Units.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Units"/>
-        <CursorPos X="1" Y="1"/>
-        <TopLine Value="1"/>
-        <UsageCount Value="21"/>
+        <CursorPos X="53" Y="3186"/>
+        <TopLine Value="3174"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit14>
       <Unit15>
         <Filename Value="KM_Units_WorkPlan.pas"/>
@@ -156,7 +170,8 @@
         <UnitName Value="KM_Units_WorkPlan"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="21"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit15>
       <Unit16>
         <Filename Value="KM_UnitTaskDelivery.pas"/>
@@ -164,7 +179,8 @@
         <UnitName Value="KM_UnitTaskDelivery"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="21"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit16>
       <Unit17>
         <Filename Value="KM_Utils.pas"/>
@@ -172,32 +188,34 @@
         <UnitName Value="KM_Utils"/>
         <CursorPos X="10" Y="3"/>
         <TopLine Value="1"/>
-        <UsageCount Value="21"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit17>
       <Unit18>
         <Filename Value="KM_Viewport.pas"/>
         <UnitName Value="KM_Viewport"/>
-        <CursorPos X="1" Y="1"/>
-        <TopLine Value="1"/>
-        <UsageCount Value="10"/>
+        <CursorPos X="23" Y="103"/>
+        <TopLine Value="86"/>
+        <UsageCount Value="11"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit18>
       <Unit19>
         <Filename Value="KM_Controls.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Controls"/>
-        <CursorPos X="1" Y="1"/>
-        <TopLine Value="1"/>
-        <UsageCount Value="21"/>
+        <CursorPos X="50" Y="1083"/>
+        <TopLine Value="1069"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit19>
       <Unit20>
         <Filename Value="KM_Defaults.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Defaults"/>
-        <CursorPos X="1" Y="18"/>
-        <TopLine Value="1"/>
-        <EditorIndex Value="4"/>
-        <UsageCount Value="21"/>
-        <Loaded Value="True"/>
+        <CursorPos X="1" Y="951"/>
+        <TopLine Value="925"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit20>
       <Unit21>
         <Filename Value="KM_DeliverQueue.pas"/>
@@ -205,18 +223,20 @@
         <UnitName Value="KM_DeliverQueue"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="21"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit21>
       <Unit22>
         <Filename Value="KM_Form_Loading.pas"/>
         <IsPartOfProject Value="True"/>
+        <ComponentName Value="FormLoading"/>
         <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
         <UnitName Value="KM_Form_Loading"/>
-        <CursorPos X="1" Y="26"/>
-        <TopLine Value="1"/>
-        <EditorIndex Value="0"/>
-        <UsageCount Value="21"/>
-        <Loaded Value="True"/>
+        <CursorPos X="37" Y="10"/>
+        <TopLine Value="3"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit22>
       <Unit23>
         <Filename Value="KM_Game.pas"/>
@@ -224,15 +244,17 @@
         <UnitName Value="KM_Game"/>
         <CursorPos X="3" Y="4"/>
         <TopLine Value="1"/>
-        <UsageCount Value="21"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit23>
       <Unit24>
         <Filename Value="KM_Houses.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Houses"/>
-        <CursorPos X="35" Y="169"/>
-        <TopLine Value="152"/>
-        <UsageCount Value="21"/>
+        <CursorPos X="45" Y="1521"/>
+        <TopLine Value="1506"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit24>
       <Unit25>
         <Filename Value="KM_InterfaceGamePlay.pas"/>
@@ -240,15 +262,17 @@
         <UnitName Value="KM_InterfaceGamePlay"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="21"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit25>
       <Unit26>
         <Filename Value="KM_InterfaceMainMenu.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_InterfaceMainMenu"/>
-        <CursorPos X="5" Y="684"/>
-        <TopLine Value="664"/>
-        <UsageCount Value="21"/>
+        <CursorPos X="45" Y="8"/>
+        <TopLine Value="1"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit26>
       <Unit27>
         <Filename Value="KM_InterfaceMapEditor.pas"/>
@@ -256,7 +280,8 @@
         <UnitName Value="KM_InterfaceMapEditor"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="21"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit27>
       <Unit28>
         <Filename Value="KM_LoadDAT.pas"/>
@@ -264,15 +289,17 @@
         <UnitName Value="KM_LoadDAT"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="21"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit28>
       <Unit29>
         <Filename Value="KM_LoadLib.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_LoadLib"/>
-        <CursorPos X="1" Y="1"/>
-        <TopLine Value="1"/>
-        <UsageCount Value="21"/>
+        <CursorPos X="25" Y="60"/>
+        <TopLine Value="48"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit29>
       <Unit30>
         <Filename Value="KM_PathFinding.pas"/>
@@ -280,7 +307,8 @@
         <UnitName Value="KM_PathFinding"/>
         <CursorPos X="27" Y="3"/>
         <TopLine Value="1"/>
-        <UsageCount Value="21"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit30>
       <Unit31>
         <Filename Value="KM_Player.pas"/>
@@ -288,7 +316,8 @@
         <UnitName Value="KM_Player"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="21"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit31>
       <Unit32>
         <Filename Value="KM_PlayerAI.pas"/>
@@ -296,7 +325,8 @@
         <UnitName Value="KM_PlayerAI"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="21"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit32>
       <Unit33>
         <Filename Value="KM_PlayersCollection.pas"/>
@@ -304,23 +334,26 @@
         <UnitName Value="KM_PlayersCollection"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="21"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit33>
       <Unit34>
         <Filename Value="KM_RenderUI.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_RenderUI"/>
-        <CursorPos X="1" Y="4"/>
-        <TopLine Value="1"/>
-        <UsageCount Value="21"/>
+        <CursorPos X="13" Y="463"/>
+        <TopLine Value="448"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit34>
       <Unit35>
         <Filename Value="KM_ResourceGFX.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_ResourceGFX"/>
-        <CursorPos X="2" Y="6"/>
-        <TopLine Value="1"/>
-        <UsageCount Value="21"/>
+        <CursorPos X="71" Y="1073"/>
+        <TopLine Value="1059"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit35>
       <Unit36>
         <Filename Value="KM_Settings.pas"/>
@@ -328,31 +361,32 @@
         <UnitName Value="KM_Settings"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="21"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit36>
       <Unit37>
         <Filename Value="KM_SoundFX.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_SoundFX"/>
-        <CursorPos X="1" Y="1"/>
-        <TopLine Value="1"/>
-        <UsageCount Value="21"/>
+        <CursorPos X="14" Y="484"/>
+        <TopLine Value="458"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit37>
       <Unit38>
         <Filename Value="KM_Terrain.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Terrain"/>
-        <CursorPos X="1" Y="1"/>
-        <TopLine Value="1"/>
-        <UsageCount Value="21"/>
+        <CursorPos X="57" Y="375"/>
+        <TopLine Value="361"/>
+        <UsageCount Value="24"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit38>
       <Unit39>
         <Filename Value="KM_Form_Loading.lfm"/>
-        <CursorPos X="18" Y="2"/>
+        <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="2"/>
         <UsageCount Value="10"/>
-        <Loaded Value="True"/>
         <SyntaxHighlighter Value="LFM"/>
       </Unit39>
       <Unit40>
@@ -371,50 +405,91 @@
       </Unit41>
       <Unit42>
         <Filename Value="KM_Form_Loading.lrs"/>
-        <CursorPos X="17" Y="1"/>
+        <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="3"/>
         <UsageCount Value="10"/>
-        <Loaded Value="True"/>
+        <SyntaxHighlighter Value="Delphi"/>
       </Unit42>
+      <Unit43>
+        <Filename Value="..\..\..\..\..\Lazarus\fpc\2.2.4\source\rtl\objpas\math.pp"/>
+        <UnitName Value="math"/>
+        <CursorPos X="10" Y="154"/>
+        <TopLine Value="140"/>
+        <UsageCount Value="10"/>
+      </Unit43>
+      <Unit44>
+        <Filename Value=" Common \openal.pas"/>
+        <UnitName Value="openal"/>
+        <CursorPos X="49" Y="1920"/>
+        <TopLine Value="1917"/>
+        <UsageCount Value="10"/>
+        <SyntaxHighlighter Value="Delphi"/>
+      </Unit44>
+      <Unit45>
+        <Filename Value="..\..\..\..\..\Lazarus\fpc\2.2.4\source\rtl\objpas\classes\classesh.inc"/>
+        <CursorPos X="4" Y="33"/>
+        <TopLine Value="19"/>
+        <UsageCount Value="10"/>
+      </Unit45>
+      <Unit46>
+        <Filename Value=" Common \ColorPicker.pas"/>
+        <ComponentName Value="Form_ColorPicker"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="ColorPicker"/>
+        <CursorPos X="1" Y="354"/>
+        <TopLine Value="327"/>
+        <UsageCount Value="11"/>
+        <SyntaxHighlighter Value="Delphi"/>
+      </Unit46>
+      <Unit47>
+        <Filename Value=" Common \ColorPicker.lfm"/>
+        <CursorPos X="1" Y="1"/>
+        <TopLine Value="1"/>
+        <UsageCount Value="10"/>
+        <SyntaxHighlighter Value="LFM"/>
+      </Unit47>
+      <Unit48>
+        <Filename Value="..\..\..\..\..\Lazarus\lcl\controls.pp"/>
+        <UnitName Value="Controls"/>
+        <CursorPos X="28" Y="1322"/>
+        <TopLine Value="1308"/>
+        <UsageCount Value="10"/>
+      </Unit48>
+      <Unit49>
+        <Filename Value="..\..\..\..\..\Lazarus\fpc\2.2.4\source\rtl\win\wininc\struct.inc"/>
+        <CursorPos X="6" Y="233"/>
+        <TopLine Value="219"/>
+        <UsageCount Value="10"/>
+      </Unit49>
+      <Unit50>
+        <Filename Value="..\..\..\..\..\Lazarus\fpc\2.2.4\source\rtl\win32\classes.pp"/>
+        <UnitName Value="Classes"/>
+        <CursorPos X="5" Y="28"/>
+        <TopLine Value="14"/>
+        <UsageCount Value="10"/>
+      </Unit50>
+      <Unit51>
+        <Filename Value="..\..\..\..\..\Lazarus\fpc\2.2.4\source\rtl\objpas\types.pp"/>
+        <UnitName Value="types"/>
+        <CursorPos X="1" Y="1"/>
+        <TopLine Value="67"/>
+        <UsageCount Value="10"/>
+      </Unit51>
+      <Unit52>
+        <Filename Value="KM_Unit1.lfm"/>
+        <IsPartOfProject Value="True"/>
+        <CursorPos X="16" Y="16"/>
+        <TopLine Value="2"/>
+        <UsageCount Value="20"/>
+        <SyntaxHighlighter Value="LFM"/>
+      </Unit52>
     </Units>
-    <JumpHistory Count="9" HistoryIndex="8">
+    <JumpHistory Count="1" HistoryIndex="0">
       <Position1>
-        <Filename Value="KM_Form_Loading.pas"/>
-        <Caret Line="15" Column="46" TopLine="1"/>
+        <Filename Value=" Common \KromUtils.pas"/>
+        <Caret Line="141" Column="10" TopLine="127"/>
       </Position1>
-      <Position2>
-        <Filename Value="KM_Form_Loading.lrs"/>
-        <Caret Line="1" Column="11" TopLine="1"/>
-      </Position2>
-      <Position3>
-        <Filename Value="KM_Defaults.pas"/>
-        <Caret Line="262" Column="104" TopLine="249"/>
-      </Position3>
-      <Position4>
-        <Filename Value="KM_Form_Loading.lrs"/>
-        <Caret Line="65" Column="3" TopLine="48"/>
-      </Position4>
-      <Position5>
-        <Filename Value="KM_Form_Loading.lrs"/>
-        <Caret Line="1" Column="1" TopLine="1"/>
-      </Position5>
-      <Position6>
-        <Filename Value="KM_Form_Loading.pas"/>
-        <Caret Line="5" Column="1" TopLine="1"/>
-      </Position6>
-      <Position7>
-        <Filename Value="KM_Form_Loading.pas"/>
-        <Caret Line="25" Column="4" TopLine="1"/>
-      </Position7>
-      <Position8>
-        <Filename Value="KM_Form_Loading.pas"/>
-        <Caret Line="3" Column="56" TopLine="1"/>
-      </Position8>
-      <Position9>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="63" Column="5" TopLine="37"/>
-      </Position9>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
@@ -424,6 +499,11 @@
       <IncludeFiles Value=" Common \; Common \zlib\"/>
       <OtherUnitFiles Value=" Common \; Common \zlib\"/>
     </SearchPaths>
+    <Parsing>
+      <SyntaxOptions>
+        <SyntaxMode Value="Delphi"/>
+      </SyntaxOptions>
+    </Parsing>
     <Linking>
       <Options>
         <Win32>
