--- a/KaM_Remake.lpi
+++ b/KaM_Remake.lpi
@@ -8,7 +8,7 @@
       <TargetFileExt Value=".exe"/>
       <Title Value="KaM_Remake"/>
       <UseXPManifest Value="True"/>
-      <ActiveEditorIndexAtStart Value="6"/>
+      <ActiveEditorIndexAtStart Value="8"/>
     </General>
     <VersionInfo>
       <ProjectVersion Value=""/>
@@ -32,24 +32,28 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="54">
+    <Units Count="55">
       <Unit0>
         <Filename Value="KaM_Remake.dpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KaM_Remake"/>
         <CursorPos X="24" Y="6"/>
         <TopLine Value="1"/>
-        <UsageCount Value="27"/>
+        <UsageCount Value="28"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit0>
       <Unit1>
         <Filename Value="KM_Unit1.pas"/>
         <IsPartOfProject Value="True"/>
+        <ComponentName Value="Form1"/>
         <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
         <UnitName Value="KM_Unit1"/>
-        <CursorPos X="21" Y="63"/>
-        <TopLine Value="57"/>
-        <UsageCount Value="25"/>
+        <CursorPos X="12" Y="275"/>
+        <TopLine Value="267"/>
+        <EditorIndex Value="8"/>
+        <UsageCount Value="26"/>
+        <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit1>
       <Unit2>
@@ -69,7 +73,7 @@
         <CursorPos X="27" Y="65"/>
         <TopLine Value="48"/>
         <EditorIndex Value="1"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit3>
@@ -102,7 +106,7 @@
         <UnitName Value="KM_TGATexture"/>
         <CursorPos X="28" Y="83"/>
         <TopLine Value="72"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit7>
       <Unit8>
@@ -119,8 +123,8 @@
         <UnitName Value="KM_CommonTypes"/>
         <CursorPos X="22" Y="33"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="10"/>
-        <UsageCount Value="25"/>
+        <EditorIndex Value="13"/>
+        <UsageCount Value="26"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit9>
@@ -136,7 +140,7 @@
         <UnitName Value="KM_UnitActionGoInOut"/>
         <CursorPos X="30" Y="3"/>
         <TopLine Value="1"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit11>
       <Unit12>
@@ -145,7 +149,7 @@
         <UnitName Value="KM_UnitActionStay"/>
         <CursorPos X="1" Y="7"/>
         <TopLine Value="1"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit12>
       <Unit13>
@@ -155,7 +159,7 @@
         <CursorPos X="35" Y="58"/>
         <TopLine Value="47"/>
         <EditorIndex Value="4"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit13>
@@ -165,8 +169,8 @@
         <UnitName Value="KM_Units"/>
         <CursorPos X="29" Y="3362"/>
         <TopLine Value="3345"/>
-        <EditorIndex Value="9"/>
-        <UsageCount Value="25"/>
+        <EditorIndex Value="12"/>
+        <UsageCount Value="26"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit14>
@@ -176,7 +180,7 @@
         <UnitName Value="KM_Units_WorkPlan"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit15>
       <Unit16>
@@ -185,8 +189,8 @@
         <UnitName Value="KM_UnitTaskDelivery"/>
         <CursorPos X="47" Y="29"/>
         <TopLine Value="18"/>
-        <EditorIndex Value="8"/>
-        <UsageCount Value="25"/>
+        <EditorIndex Value="11"/>
+        <UsageCount Value="26"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit16>
@@ -196,7 +200,7 @@
         <UnitName Value="KM_Utils"/>
         <CursorPos X="10" Y="3"/>
         <TopLine Value="1"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit17>
       <Unit18>
@@ -213,7 +217,7 @@
         <UnitName Value="KM_Controls"/>
         <CursorPos X="50" Y="1083"/>
         <TopLine Value="1069"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit19>
       <Unit20>
@@ -222,7 +226,7 @@
         <UnitName Value="KM_Defaults"/>
         <CursorPos X="1" Y="951"/>
         <TopLine Value="925"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit20>
       <Unit21>
@@ -231,8 +235,8 @@
         <UnitName Value="KM_DeliverQueue"/>
         <CursorPos X="6" Y="3"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="7"/>
-        <UsageCount Value="25"/>
+        <EditorIndex Value="10"/>
+        <UsageCount Value="26"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit21>
@@ -245,7 +249,7 @@
         <UnitName Value="KM_Form_Loading"/>
         <CursorPos X="37" Y="10"/>
         <TopLine Value="3"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit22>
       <Unit23>
@@ -255,7 +259,7 @@
         <CursorPos X="32" Y="33"/>
         <TopLine Value="22"/>
         <EditorIndex Value="2"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit23>
@@ -263,10 +267,10 @@
         <Filename Value="KM_Houses.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Houses"/>
-        <CursorPos X="25" Y="1522"/>
+        <CursorPos X="47" Y="1522"/>
         <TopLine Value="1506"/>
         <EditorIndex Value="6"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit24>
@@ -276,7 +280,7 @@
         <UnitName Value="KM_InterfaceGamePlay"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit25>
       <Unit26>
@@ -285,7 +289,7 @@
         <UnitName Value="KM_InterfaceMainMenu"/>
         <CursorPos X="45" Y="8"/>
         <TopLine Value="1"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit26>
       <Unit27>
@@ -294,7 +298,7 @@
         <UnitName Value="KM_InterfaceMapEditor"/>
         <CursorPos X="1" Y="365"/>
         <TopLine Value="348"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit27>
       <Unit28>
@@ -303,7 +307,7 @@
         <UnitName Value="KM_LoadDAT"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit28>
       <Unit29>
@@ -312,7 +316,7 @@
         <UnitName Value="KM_LoadLib"/>
         <CursorPos X="25" Y="60"/>
         <TopLine Value="48"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit29>
       <Unit30>
@@ -322,7 +326,7 @@
         <CursorPos X="6" Y="3"/>
         <TopLine Value="1"/>
         <EditorIndex Value="3"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit30>
@@ -332,7 +336,7 @@
         <UnitName Value="KM_Player"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit31>
       <Unit32>
@@ -341,7 +345,7 @@
         <UnitName Value="KM_PlayerAI"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit32>
       <Unit33>
@@ -350,7 +354,7 @@
         <UnitName Value="KM_PlayersCollection"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit33>
       <Unit34>
@@ -359,7 +363,7 @@
         <UnitName Value="KM_RenderUI"/>
         <CursorPos X="13" Y="463"/>
         <TopLine Value="448"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit34>
       <Unit35>
@@ -368,7 +372,7 @@
         <UnitName Value="KM_ResourceGFX"/>
         <CursorPos X="19" Y="606"/>
         <TopLine Value="595"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit35>
       <Unit36>
@@ -377,7 +381,7 @@
         <UnitName Value="KM_Settings"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit36>
       <Unit37>
@@ -386,7 +390,7 @@
         <UnitName Value="KM_SoundFX"/>
         <CursorPos X="14" Y="484"/>
         <TopLine Value="458"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit37>
       <Unit38>
@@ -396,7 +400,7 @@
         <CursorPos X="16" Y="259"/>
         <TopLine Value="242"/>
         <EditorIndex Value="5"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit38>
@@ -497,9 +501,11 @@
       <Unit52>
         <Filename Value="KM_Unit1.lfm"/>
         <IsPartOfProject Value="True"/>
-        <CursorPos X="16" Y="16"/>
-        <TopLine Value="2"/>
-        <UsageCount Value="21"/>
+        <CursorPos X="1" Y="1"/>
+        <TopLine Value="1"/>
+        <EditorIndex Value="7"/>
+        <UsageCount Value="22"/>
+        <Loaded Value="True"/>
         <SyntaxHighlighter Value="LFM"/>
       </Unit52>
       <Unit53>
@@ -510,8 +516,17 @@
         <UsageCount Value="10"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit53>
+      <Unit54>
+        <Filename Value="KM_Unit1.dfm"/>
+        <CursorPos X="1" Y="18"/>
+        <TopLine Value="1"/>
+        <EditorIndex Value="9"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+        <SyntaxHighlighter Value="LFM"/>
+      </Unit54>
     </Units>
-    <JumpHistory Count="23" HistoryIndex="22">
+    <JumpHistory Count="29" HistoryIndex="28">
       <Position1>
         <Filename Value="KM_Units.pas"/>
         <Caret Line="3149" Column="49" TopLine="3149"/>
@@ -604,6 +619,30 @@
         <Filename Value="KM_Houses.pas"/>
         <Caret Line="11" Column="32" TopLine="1"/>
       </Position23>
+      <Position24>
+        <Filename Value="KM_Unit1.lfm"/>
+        <Caret Line="18" Column="23" TopLine="2"/>
+      </Position24>
+      <Position25>
+        <Filename Value="KM_Unit1.lfm"/>
+        <Caret Line="206" Column="13" TopLine="195"/>
+      </Position25>
+      <Position26>
+        <Filename Value="KM_Unit1.pas"/>
+        <Caret Line="70" Column="19" TopLine="61"/>
+      </Position26>
+      <Position27>
+        <Filename Value="KM_Unit1.pas"/>
+        <Caret Line="226" Column="1" TopLine="209"/>
+      </Position27>
+      <Position28>
+        <Filename Value="KM_Unit1.dfm"/>
+        <Caret Line="213" Column="1" TopLine="196"/>
+      </Position28>
+      <Position29>
+        <Filename Value="KM_Unit1.pas"/>
+        <Caret Line="56" Column="33" TopLine="53"/>
+      </Position29>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
