--- a/KaM_Remake.lpi
+++ b/KaM_Remake.lpi
@@ -49,8 +49,8 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="KM_Unit1"/>
-        <CursorPos X="12" Y="275"/>
-        <TopLine Value="267"/>
+        <CursorPos X="20" Y="664"/>
+        <TopLine Value="647"/>
         <EditorIndex Value="8"/>
         <UsageCount Value="26"/>
         <Loaded Value="True"/>
@@ -122,8 +122,8 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_CommonTypes"/>
         <CursorPos X="22" Y="33"/>
-        <TopLine Value="1"/>
-        <EditorIndex Value="13"/>
+        <TopLine Value="2"/>
+        <EditorIndex Value="14"/>
         <UsageCount Value="26"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
@@ -169,7 +169,7 @@
         <UnitName Value="KM_Units"/>
         <CursorPos X="29" Y="3362"/>
         <TopLine Value="3345"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="13"/>
         <UsageCount Value="26"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
@@ -189,7 +189,7 @@
         <UnitName Value="KM_UnitTaskDelivery"/>
         <CursorPos X="47" Y="29"/>
         <TopLine Value="18"/>
-        <EditorIndex Value="11"/>
+        <EditorIndex Value="12"/>
         <UsageCount Value="26"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
@@ -235,7 +235,7 @@
         <UnitName Value="KM_DeliverQueue"/>
         <CursorPos X="6" Y="3"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="11"/>
         <UsageCount Value="26"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
@@ -370,9 +370,11 @@
         <Filename Value="KM_ResourceGFX.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_ResourceGFX"/>
-        <CursorPos X="19" Y="606"/>
-        <TopLine Value="595"/>
+        <CursorPos X="37" Y="614"/>
+        <TopLine Value="599"/>
+        <EditorIndex Value="9"/>
         <UsageCount Value="26"/>
+        <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit35>
       <Unit36>
@@ -520,7 +522,7 @@
         <Filename Value="KM_Unit1.dfm"/>
         <CursorPos X="1" Y="18"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="10"/>
         <UsageCount Value="10"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="LFM"/>
@@ -569,79 +571,79 @@
       </Position10>
       <Position11>
         <Filename Value="KM_Units.pas"/>
-        <Caret Line="1646" Column="35" TopLine="1716"/>
+        <Caret Line="3428" Column="30" TopLine="3428"/>
       </Position11>
       <Position12>
         <Filename Value="KM_Units.pas"/>
-        <Caret Line="3428" Column="30" TopLine="3428"/>
+        <Caret Line="3099" Column="1" TopLine="3084"/>
       </Position12>
       <Position13>
         <Filename Value="KM_Units.pas"/>
-        <Caret Line="3099" Column="1" TopLine="3084"/>
+        <Caret Line="25" Column="45" TopLine="8"/>
       </Position13>
       <Position14>
         <Filename Value="KM_Units.pas"/>
-        <Caret Line="25" Column="45" TopLine="8"/>
+        <Caret Line="3328" Column="15" TopLine="3312"/>
       </Position14>
       <Position15>
         <Filename Value="KM_Units.pas"/>
-        <Caret Line="3328" Column="15" TopLine="3312"/>
+        <Caret Line="3359" Column="17" TopLine="3342"/>
       </Position15>
       <Position16>
-        <Filename Value="KM_Units.pas"/>
-        <Caret Line="3359" Column="17" TopLine="3342"/>
-      </Position16>
-      <Position17>
         <Filename Value="KM_CommonTypes.pas"/>
         <Caret Line="28" Column="22" TopLine="11"/>
-      </Position17>
-      <Position18>
+      </Position16>
+      <Position17>
         <Filename Value="KM_Render.pas"/>
         <Caret Line="83" Column="53" TopLine="72"/>
+      </Position17>
+      <Position18>
+        <Filename Value="KM_Units.pas"/>
+        <Caret Line="3359" Column="18" TopLine="3342"/>
       </Position18>
       <Position19>
         <Filename Value="KM_Units.pas"/>
-        <Caret Line="3359" Column="18" TopLine="3342"/>
+        <Caret Line="3358" Column="20" TopLine="3341"/>
       </Position19>
       <Position20>
-        <Filename Value="KM_Units.pas"/>
-        <Caret Line="3358" Column="20" TopLine="3341"/>
-      </Position20>
-      <Position21>
         <Filename Value="KM_CommonTypes.pas"/>
         <Caret Line="252" Column="26" TopLine="235"/>
-      </Position21>
-      <Position22>
+      </Position20>
+      <Position21>
         <Filename Value="KM_Terrain.pas"/>
         <Caret Line="1383" Column="7" TopLine="1372"/>
-      </Position22>
-      <Position23>
+      </Position21>
+      <Position22>
         <Filename Value="KM_Houses.pas"/>
         <Caret Line="11" Column="32" TopLine="1"/>
+      </Position22>
+      <Position23>
+        <Filename Value="KM_Unit1.lfm"/>
+        <Caret Line="18" Column="23" TopLine="2"/>
       </Position23>
       <Position24>
         <Filename Value="KM_Unit1.lfm"/>
-        <Caret Line="18" Column="23" TopLine="2"/>
+        <Caret Line="206" Column="13" TopLine="195"/>
       </Position24>
       <Position25>
-        <Filename Value="KM_Unit1.lfm"/>
-        <Caret Line="206" Column="13" TopLine="195"/>
+        <Filename Value="KM_Unit1.pas"/>
+        <Caret Line="70" Column="19" TopLine="61"/>
       </Position25>
       <Position26>
         <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="70" Column="19" TopLine="61"/>
+        <Caret Line="226" Column="1" TopLine="209"/>
       </Position26>
       <Position27>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="226" Column="1" TopLine="209"/>
-      </Position27>
-      <Position28>
         <Filename Value="KM_Unit1.dfm"/>
         <Caret Line="213" Column="1" TopLine="196"/>
+      </Position27>
+      <Position28>
+        <Filename Value="KM_Unit1.pas"/>
+        <Caret Line="56" Column="33" TopLine="53"/>
       </Position28>
       <Position29>
         <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="56" Column="33" TopLine="53"/>
+        <Caret Line="278" Column="17" TopLine="267"/>
       </Position29>
     </JumpHistory>
   </ProjectOptions>
@@ -655,8 +657,20 @@
     <Parsing>
       <SyntaxOptions>
         <SyntaxMode Value="Delphi"/>
+        <CStyleOperator Value="False"/>
+        <AllowLabel Value="False"/>
+        <CPPInline Value="False"/>
       </SyntaxOptions>
     </Parsing>
+    <CodeGeneration>
+      <Checks>
+        <IOChecks Value="True"/>
+        <RangeChecks Value="True"/>
+        <OverflowChecks Value="True"/>
+        <StackChecks Value="True"/>
+      </Checks>
+      <VerifyObjMethodCallValidity Value="True"/>
+    </CodeGeneration>
     <Linking>
       <Options>
         <Win32>
