Updated KaM Editor to compile in Delphi6

--- a/KaM Editor/KM_Editor.cfg
+++ b/KaM Editor/KM_Editor.cfg
@@ -33,7 +33,7 @@
 -K$00400000
 -LE"c:\program files\borland\delphi6\Projects\Bpl"
 -LN"c:\program files\borland\delphi6\Projects\Bpl"
--U"C:\Documents and Settings\Krom\Desktop\Delphi\ Common ;E:\Delphi\ Common "
--O"C:\Documents and Settings\Krom\Desktop\Delphi\ Common ;E:\Delphi\ Common "
--I"C:\Documents and Settings\Krom\Desktop\Delphi\ Common ;E:\Delphi\ Common "
--R"C:\Documents and Settings\Krom\Desktop\Delphi\ Common ;E:\Delphi\ Common "
+-U"..\ Common "
+-O"..\ Common "
+-I"..\ Common "
+-R"..\ Common "
